--- a/CosmeticShop/CosmeticShop/appsettings.json
+++ b/CosmeticShop/CosmeticShop/appsettings.json
@@ -1,19 +1,19 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=XUANHAU\\SQLEXPRESS; Database = CosmecticShop;Integrated Security=True;"
+    "DefaultConnection": "workstation id=ConMoHeo.mssql.somee.com;packet size=4096;user id=hauvx94_SQLLogin_3;pwd=bxwcbejzvk;data source=ConMoHeo.mssql.somee.com;persist security info=False;initial catalog=ConMoHeo"
   },
   "appSettings": {
-    "BusinessAccountKey": "sanboxpthyst@gmail.com",
+    "BusinessAccountKey": "hauxuan94@gmail.com",
     "UseSandbox": "true",
     "CurrencyCode": "USD",
-    "ReturnURL": "http://www.web42shop10.somee.com/Paypal/PaypalView/RedirectFromPaypal",
-    "CancelURL": "http://www.web42shop10.somee.com/Paypal/PaypalView/CancelFromPaypal",
-    "NotifyURL": "http://www.web42shop10.somee.com/Paypal/PaypalView/NotifyFromPaypal"
+    "ReturnURL": "http://www.cosmeticshop.somee.com/Paypal/PaypalView/RedirectFromPaypal",
+    "CancelURL": "http://www.cosmeticshop.somee.com/Paypal/PaypalView/CancelFromPaypal",
+    "NotifyURL": "http://www.cosmeticshop.somee.com/Paypal/PaypalView/NotifyFromPaypal"
   },
   "PayPal": {
     "AuthToken": "vjfkK0m50TxuXXrSzuEv7uncWgGQQB94xogYNq6A1kaSF4ZyGQ95Wpn-pbm",
     "PostUrl": "https://www.sandbox.paypal.com/cgi-bin/webscr",
-    "Business": "sanboxpthyst@gmail.com",
-    "ReturnUrl": "http://www.web42shop10.somee.com/Checkout/PayPalPaid/"
+    "Business": "hauxuan94@gmail.com",
+    "ReturnUrl": "http://www.cosmeticshop.somee.com/Checkout/PayPalPaid/"
   }
 }
