--- a/CosmeticShop/CosmeticShop/appsettings.json
+++ b/CosmeticShop/CosmeticShop/appsettings.json
@@ -9,7 +9,15 @@
     "CurrencyCode": "USD",
     "ReturnURL": "http://www.cosmeticshop.somee.com/Paypal/PaypalView/RedirectFromPaypal",
     "CancelURL": "http://www.cosmeticshop.somee.com/Paypal/PaypalView/CancelFromPaypal",
-    "NotifyURL": "http://www.cosmeticshop.somee.com/Paypal/PaypalView/NotifyFromPaypal"
+    "NotifyURL": "http://www.cosmeticshop.somee.com/Paypal/PaypalView/NotifyFromPaypal",
+    "FromEmailAddress": "cocacolastore20061994@gmail.com",
+    "FromEmailDisplayName": "Hello Minh LA Suong",
+    "FromMailPassword": "hau240906+",
+    "SMTPHost": "smtp.gmail.com",
+    "SMTPPort": "587",
+    "EnabledSSL": "true",
+    "ToEmailAddress": "hauxuan94#gmail.com"
+
   },
   "PayPal": {
     "AuthToken": "vjfkK0m50TxuXXrSzuEv7uncWgGQQB94xogYNq6A1kaSF4ZyGQ95Wpn-pbm",
