Thêm Thương Hiệu

--- a/CosmeticShop/CosmeticShop/appsettings.json
+++ b/CosmeticShop/CosmeticShop/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     //"DefaultConnection": "workstation id=ConMoHeo.mssql.somee.com;packet size=4096;user id=hauvx94_SQLLogin_3;pwd=bxwcbejzvk;data source=ConMoHeo.mssql.somee.com;persist security info=False;initial catalog=ConMoHeo",
-    "DefaultConnection": "Server=tcp:cosmeticshopdbserver.database.windows.net,1433;Initial Catalog=CosmeticShop_db;Persist Security Info=False;User ID=Cosmestic;Password=Hihi1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+      "DefaultConnection": "Server=tcp:cosmeticshopdbserver.database.windows.net,1433;Initial Catalog=CosmeticShop_db;Persist Security Info=False;User ID=Cosmestic;Password=Hihi1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+   // "DefaultConnection": "Server=XUANHAU\\SQLEXPRESS; Database =CosmecticShop;Integrated Security=True;"
   },
   "appSettings": {
     "BusinessAccountKey": "hauxuan94@gmail.com",
