--- a/CosmeticShop/CosmeticShop/appsettings.json
+++ b/CosmeticShop/CosmeticShop/appsettings.json
@@ -8,22 +8,22 @@
     "BusinessAccountKey": "hauxuan94@gmail.com",
     "UseSandbox": "true",
     "CurrencyCode": "USD",
-    "ReturnURL": "http://www.cosmeticshop.somee.com/Paypal/PaypalView/RedirectFromPaypal",
-    "CancelURL": "http://www.cosmeticshop.somee.com/Paypal/PaypalView/CancelFromPaypal",
-    "NotifyURL": "http://www.cosmeticshop.somee.com/Paypal/PaypalView/NotifyFromPaypal",
+    "ReturnURL": "https://cosmeticshop.azurewebsites.net/Paypal/PaypalView/RedirectFromPaypal",
+    "CancelURL": "https://cosmeticshop.azurewebsites.net/Paypal/PaypalView/CancelFromPaypal",
+    "NotifyURL": "https://cosmeticshop.azurewebsites.net/Paypal/PaypalView/NotifyFromPaypal",
     "FromEmailAddress": "cocacolastore20061994@gmail.com",
     "FromEmailDisplayName": "Hello Minh LA Suong",
     "FromMailPassword": "hau240906+",
     "SMTPHost": "smtp.gmail.com",
     "SMTPPort": "587",
     "EnabledSSL": "true",
-    "ToEmailAddress": "hauxuan94#gmail.com"
+    "ToEmailAddress": "hauxuan94@gmail.com"
 
   },
   "PayPal": {
     "AuthToken": "vjfkK0m50TxuXXrSzuEv7uncWgGQQB94xogYNq6A1kaSF4ZyGQ95Wpn-pbm",
     "PostUrl": "https://www.sandbox.paypal.com/cgi-bin/webscr",
     "Business": "hauxuan94@gmail.com",
-    "ReturnUrl": "http://www.cosmeticshop.somee.com/Checkout/PayPalPaid/"
+    "ReturnUrl": "https://cosmeticshop.azurewebsites.net/Checkout/PayPalPaid/"
   }
 }
