--- a/CosmeticShop/CosmeticShop/appsettings.json
+++ b/CosmeticShop/CosmeticShop/appsettings.json
@@ -1,16 +1,16 @@
 {
   "ConnectionStrings": {
     //"DefaultConnection": "workstation id=ConMoHeo.mssql.somee.com;packet size=4096;user id=hauvx94_SQLLogin_3;pwd=bxwcbejzvk;data source=ConMoHeo.mssql.somee.com;persist security info=False;initial catalog=ConMoHeo",
-      "DefaultConnection": "Server=tcp:cosmeticshopdbserver.database.windows.net,1433;Initial Catalog=CosmeticShop_db;Persist Security Info=False;User ID=Cosmestic;Password=Hihi1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-   // "DefaultConnection": "Server=XUANHAU\\SQLEXPRESS; Database =CosmecticShop;Integrated Security=True;"
+    "DefaultConnection": "Server=tcp:cosmeticshopdbserver.database.windows.net,1433;Initial Catalog=CosmeticShop_db;Persist Security Info=False;User ID=Cosmestic;Password=Hihi1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    //"DefaultConnection": "Server=XUANHAU\\SQLEXPRESS; Database =CosmecticShop;Integrated Security=True;"
   },
   "appSettings": {
     "BusinessAccountKey": "hauxuan94@gmail.com",
     "UseSandbox": "true",
     "CurrencyCode": "USD",
-    "ReturnURL": "https://cosmeticshop.azurewebsites.net/Paypal/PaypalView/RedirectFromPaypal",
-    "CancelURL": "https://cosmeticshop.azurewebsites.net/Paypal/PaypalView/CancelFromPaypal",
-    "NotifyURL": "https://cosmeticshop.azurewebsites.net/Paypal/PaypalView/NotifyFromPaypal",
+    "ReturnURL": "https://cosmeticshop20.azurewebsites.net/Paypal/PaypalView/RedirectFromPaypal",
+    "CancelURL": "https://cosmeticshop20.azurewebsites.net/Paypal/PaypalView/CancelFromPaypal",
+    "NotifyURL": "https://cosmeticshop20.azurewebsites.net/Paypal/PaypalView/NotifyFromPaypal",
     "FromEmailAddress": "cocacolastore20061994@gmail.com",
     "FromEmailDisplayName": "Hello Minh LA Suong",
     "FromMailPassword": "hau240906+",
@@ -24,6 +24,18 @@
     "AuthToken": "vjfkK0m50TxuXXrSzuEv7uncWgGQQB94xogYNq6A1kaSF4ZyGQ95Wpn-pbm",
     "PostUrl": "https://www.sandbox.paypal.com/cgi-bin/webscr",
     "Business": "hauxuan94@gmail.com",
-    "ReturnUrl": "https://cosmeticshop.azurewebsites.net/Checkout/PayPalPaid/"
+    "ReturnUrl": "https://cosmeticshop20.azurewebsites.net/Checkout/PayPalPaid/"
+  },
+  "Gmail": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "cocacolastore20061994@gmail.com",
+    "Password": "hau240906+",
+    "SMTP": {
+      "starttls": {
+        "enable": true
+      }
+    }
   }
 }
+
