--- a/CosmeticShop/CosmeticShop/appsettings.json
+++ b/CosmeticShop/CosmeticShop/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     //"DefaultConnection": "workstation id=ConMoHeo.mssql.somee.com;packet size=4096;user id=hauvx94_SQLLogin_3;pwd=bxwcbejzvk;data source=ConMoHeo.mssql.somee.com;persist security info=False;initial catalog=ConMoHeo",
     "DefaultConnection": "Server=tcp:cosmeticshopdbserver.database.windows.net,1433;Initial Catalog=CosmeticShop_db;Persist Security Info=False;User ID=Cosmestic;Password=Hihi1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    //"DefaultConnection": "Server=XUANHAU\\SQLEXPRESS; Database =CosmecticShop;Integrated Security=True;"
+  //  "DefaultConnection": "Server=XUANHAU\\SQLEXPRESS; Database =CosmecticShop;Integrated Security=True;"
   },
   "appSettings": {
     "BusinessAccountKey": "hauxuan94@gmail.com",
@@ -26,16 +26,16 @@
     "Business": "hauxuan94@gmail.com",
     "ReturnUrl": "https://cosmeticshop20.azurewebsites.net/Checkout/PayPalPaid/"
   },
-  "Gmail": {
+ "Gmail": {
     "Host": "smtp.gmail.com",
     "Port": 587,
-    "Username": "cocacolastore20061994@gmail.com",
-    "Password": "hau240906+",
-    "SMTP": {
-      "starttls": {
-        "enable": true
-      }
+    "Username": "moheo20061994@gmail.com",
+    "Password": "Moheo123+",
+  "SMTP": {
+    "starttls": {
+      "enable": true
     }
+  }
   }
 }
 
