--- a/CosmeticShop/CosmeticShop/CosmeticShop.csproj
+++ b/CosmeticShop/CosmeticShop/CosmeticShop.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
+    <PackageReference Include="Twilio" Version="5.37.1" />
   </ItemGroup>
 
 </Project>
